# E2E-Senario

./: .gitignore  Dockerfile.api  Dockerfile.worker  TEST_VERIFICATION.md  docker-compose.yml  pyproject.toml  test_scenario_hogak.json  호각_E2E_테스트_시나리오.xlsx
.github/workflows/: deploy-main.yml  terraform-plan.yml
app/: main.py  tasks.py  tasks_suite.py  tasks_webhook.py
app/api/: auth.py  auth_states.py  drafts.py  integration_logs.py  public.py  recordings.py  routes_runs.py  scenarios.py  suite_runs.py  team_api_keys.py  teams.py
app/core/: auth_state_store.py  celery_app.py  config.py  scenario_inject.py  security.py  storage.py
app/db/: crud.py  models.py  schema_ensure.py  session.py
app/reporting/: __init__.py  pdf_report.py  suite_pdf_report.py
app/runner/: action_transaction.py  artifact_collector.py  debug_utils.py  playwright_steps.py  pytest_entry.py  scenario.py  scenario_compiler.py  scenario_validator.py  validators.py
docs/: github_actions_deploy.md  hogak_auth_workaround.md  presentation.md  scenario_compiler_design.md  scenario_schema.md
extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
infra/terraform/: README.md  autoscaling.tf  frontend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scenarios/: hogak_e2e_full_flow.json  sample.yaml  test_hogak_login.json
scripts/: capture_storage_state.py  generate_hogak_scenarios_from_xlsx.py
tests/: conftest.py
tests/e2e/: test_scenario.py
(+54 files in other folders)
